Fix text coloring on buttons on Safari

--- a/static/css/paper.css
+++ b/static/css/paper.css
@@ -1,11 +1,13 @@
 body {
     --paper-border-width: 4px;
     --paper-accent: #3819e4;
+    --paper-foreground: #000;
     --paper-background: #fff;
 }
 
 .paper {
     display: block;
+    color: var(--paper-foreground);
     background: var(--paper-background);
     box-shadow: 0 5px 12px -2px rgba(0, 0, 0, .4);
     transform: none;
@@ -39,6 +41,7 @@ body {
 .paper.movable:active {
     transform: translateY(1px);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .5);
+    color: var(--paper-foreground);
 }
 
 .paper.accent {
